[package]
name = "minions"
description = "Bounties backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bs58 = "0.5.1"
thiserror = "2.0.12"

calimero-sdk = { git = "https://github.com/calimero-network/core", branch = "master" }
calimero-storage = { git = "https://github.com/calimero-network/core", branch = "master" }

[profile.app-release]
inherits = "release"
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[patch."https://github.com/calimero-network/core"]
calimero-storage = { path = "../../../../calimero-is-near/cali2.0-experimental/crates/storage" }
